# retrospective-crate-version-tagging

./: CHANGELOG.md  Cargo.toml  README.md
src/: create_releases.rs  detect.rs  lib.rs  main.rs  upload_releases.rs  version_resolution.rs
