[package]
name = "retrospective-crate-version-tagging"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/idanarye/retrospective-crate-version-tagging.git"
readme = "README.md"
keywords = []
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crates_io_api = "^0.11"
flate2 = "1.0.34"
parse-changelog = { version = "^0.6", default-features = false }
reqwest = { version = "^0.12", default-features = false, features = ["blocking"] }
serde_json = "1.0.128"
tar = "0.4.42"
