[package]
name = "retrospective-crate-version-tagging"
version = "0.1.1"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fill in GitHub release history from existing changlog entries and crates.io versions"
repository = "https://github.com/idanarye/retrospective-crate-version-tagging.git"
readme = "README.md"
keywords = []
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "^1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crates_io_api = "^0.11"
flate2 = "1.0.34"
gix = "0.66.0"
indicatif = "0.17.8"
parse-changelog = { version = "^0.6", default-features = false }
reqwest = { version = "^0.12", default-features = false, features = ["blocking"] }
scopeguard = "1.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "^1"
serde_yml = "0.0.12"
tar = "^0.4"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }

[profile.release]
lto = true
